--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,21 +1,17 @@
 <script type="text/javascript">
   $(document).ready(function() { 
-    // $('#carousel').carousel();
-    $('#carousel').orbit();
+    $('div#carousel').carousel();
+    // $('#carousel').orbit();
   });
 </script>
-<div id="carousel">
-  <!-- <ul> -->
-    <!-- <li><%#= image_tag "carroussel1.png" %></li> -->
-    <!-- <li><%#= image_tag "carroussel2.png" %></li> -->
-    <!-- <li><%#= image_tag "carroussel3.png" %></li> -->
-    <%= image_tag "carroussel1.png" %>
-    <%= image_tag "carroussel2.png" %>
-    <%= image_tag "carroussel3.png" %>
-  <!-- </ul> -->
-</div>
+<!-- <div id="carousel">
+  <ul>
+    <li><%#= image_tag "carroussel1.png" %></li>
+    <li><%#= image_tag "carroussel2.png" %></li>
+    <li><%#= image_tag "carroussel3.png" %></li>
+  </ul>
+</div> -->
 <div style="text-align:center">
-  <h1>Bem-vindo!</h1>
   <h4>Para agendar uma consulta, clique no link da data desejada no calendário</h4>
   <hr>
 </div>
