--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%#= javascript_include_tag "jquery.carousel.min" %>
-    <%= javascript_include_tag "jquery.orbit-1.2.3.min" %>
+    <%#= javascript_include_tag "jquery.orbit-1.2.3.min" %>
 	  <%= csrf_meta_tags %>
 	</head>
 	<body class="body">
