correção do footer e mensagem de ja logado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       </div>
       <footer style="text-align: center">
         Clinica Marquet© 2012 - Todos os direitos reservados<br/>
-        Rua Pereira dos Santos, n° 260 - Sala 104 - Centro - Itaboraí - (21)3585-5744 - (21)3244-4553
+        Rua Dr. Pereira dos Santos, n° 260 - Sala 104 - Centro - Itaboraí - (21)3585-5744 - (21)3244-4553
         <p style="font-size:10px">
           Desenvolvido por <%= mail_to "rodrigosggouvea@gmail.com", "Rodrigo Gouvêa" %>
         </p>
