adicionado javascript do formulário de marcação de consultas

--- a/app/views/consultas/new.html.erb
+++ b/app/views/consultas/new.html.erb
@@ -1,3 +1,13 @@
+<script type="text/javascript">
+$(document).ready(function() {
+		$("#marcar_sim").click(function() {
+			$("#form_consulta").show();
+		});
+		$("#marcar_nao").click(function() {
+			$("#form_consulta").hide();
+		});
+	});
+</script>
 <div class="row">
 	<h1>Nova Consulta</h1>
 	<hr>
