adicionado javascript do formulário de marcação de consultas

--- a/app/views/consultas/new.html.erb
+++ b/app/views/consultas/new.html.erb
@@ -3,7 +3,7 @@ $(document).ready(function() {
 		$("#marcar_sim").click(function() {
 			$("#form_consulta").show();
 		});
-		$("#marcar_nao").click(function() {
+		$("#marcar_n_o").click(function() {
 			$("#form_consulta").hide();
 		});
 	});
