removendo migração bugada

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -22,12 +22,10 @@
         <div class="item">
           <%= image_tag "SDC12935.JPG" %>
         </div>
-      </div><!-- /.carousel-inner -->
-      <!--  Next and Previous controls below
-            href values must reference the id for this carousel -->
+      </div>
         <a class="carousel-control left" href="#this-carousel-id" data-slide="prev"> &lsaquo;</a>
         <a class="carousel-control right" href="#this-carousel-id" data-slide="next"> &rsaquo;</a>
-    </div><!-- /.carousel -->
+    </div>
   </div>
 </div>
 <div style="text-align:center">
