aumentando o tamanho dos fields

--- a/app/views/consultas/new.html.erb
+++ b/app/views/consultas/new.html.erb
@@ -57,7 +57,7 @@ $(document).ready(function() {
 			<% end %>
 			</br>
 			<%= f.label :codigo_carteirinha_paciente %>
-			<%= f.text_field :codigo_carteirinha_paciente %>
+			<%= f.text_field :codigo_carteirinha_paciente, :size => "20" %>
 			<% if @consulta.errors[:codigo_carteirinha_paciente].any? %>
 				<%= @consulta.errors[:codigo_carteirinha_paciente].first %>
 			<% end %>
